@@ -1,6 +1,7 @@
 * version 0.0.5
 	supported ETag and If-Modified-Since.
 	make tiny url with tinyurl.com.
+	add timer for reload.
 * version 0.0.4
 	anchor for URL links.
 	anchor for @ mark.
